[tool.poetry]
name = "cheetah"
version = "0.1.0"
description = "高速灵活的数据缓存服务"
authors = ["Cheng Qiu <qiucheng@jinniuai.com>"]

[[tool.poetry.source]]
name = 'tsinghua'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple/'
default = true

[[tool.poetry.source]]
name = 'stralib'
url = 'https://cxan.jinchongzi.com/simple/'

[tool.poetry.dependencies]
python = "^3.7"
stralib = "^3.1.30"
pydantic = {extras = ["email-validator"], version = "^1.5.1"}
email-validator = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
